更新棋谱功能